# Framework-LED-Matrix

./: .gitignore  BihamMiddletonLevineTrafficModel.py  HardyPomeauPazzis.py  README.md  anagrams.py  background_runner.py  cli.py  const.py  fun.py  function_grapher_led.py  gameOfLife.py  inner_totalistic_ca.py  led_matrix_commands.py  mathFunctions.py  math_funs.py  outer_totalistic.py  pyproject.toml  requirements.txt  runtime.py  text.py
.github/workflows/: publish.yml
apps/: background_runner.py  runtime.py
core/: led_commands.py  math_engine.py
framework_led_matrix/apps/: background_runner.py  runtime.py
framework_led_matrix/core/: led_commands.py  math_engine.py
framework_led_matrix/simulations/: BihamMiddletonLevineTrafficModel.py  HardyPomeauPazzis.py  inner_totalistic.py  outer_totalistic.py
framework_led_matrix/utils/: anagrams.py  text_rendering.py
simulations/: BihamMiddletonLevineTrafficModel.py  HardyPomeauPazzis.py  inner_totalistic.py  outer_totalistic.py
utils/: anagrams.py  text_rendering.py
