[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "framework-led-matrix"
version = "0.1.0"
authors = [
  { name = "mariobx" },
]
description = "A comprehensive CLI and library for the Framework 16 LED Matrix modules, featuring simulations, text rendering, and math visualizations."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pyserial>=3.5",
    "cellpylib>=2.4.0",
    "nltk>=3.7",
    "pillow>=9.0.0",
    "tqdm>=4.64.0",
    "click>=8.1.0",
]

[project.urls]
"Homepage" = "https://github.com/mariobx/Framework-LED-Matrix"
"Bug Tracker" = "https://github.com/mariobx/Framework-LED-Matrix/issues"

[project.scripts]
framework-led = "cli:main"

[tool.setuptools]
packages = ["apps", "core", "simulations", "utils"]
py-modules = ["cli"]
